--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,7 @@ dist.jlink.output=${dist.jlink.dir}/OnlineBankingSystem
 endorsed.classpath=
 excludes=
 file.reference.sqlite-jdbc-3.42.0.0.jar=C:\\Users\\celil\\Downloads\\sqlite-jdbc-3.42.0.0.jar
-file.reference.sqlite-jdbc-3.42.0.0.jar-1=C:\\Users\\savasci\\Desktop\\OnlineBankingSystem-main\\OnlineBankingSystem\\sqlite-jdbc-3.42.0.0.jar
+file.reference.sqlite-jdbc-3.42.0.0.jar-1=sqlite-jdbc-3.42.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -50,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=20
-javac.target=20
+javac.source=21
+javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
